[package]
name = "videohash_indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "videohash_indexer"
path = "src/lib.rs"

[[bin]]
name = "videohash_indexer"
path = "src/main.rs"

[[example]]
name = "test_client"
path = "src/examples/test_client.rs"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
mih-rs = "0.3.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
dotenv = "0.15"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
google-cloud-bigquery = "0.15.0"
google-cloud-auth = "0.11.0"
chrono = "0.4.26"
google-cloud-token = "0.1.2"
gcloud-auth = "1.1.0"
async-trait = "0.1"
yup-oauth2 = "8.3.0"
hyper = "0.14"
hyper-rustls = { version = "0.24", features = ["native-tokio", "http1"] }